syntax = "proto3";

package proto;

option go_package = "proto/proto";

message User {
    uint64 id = 1;
    string name = 2;
}

message GetUserRequest {
    uint64 user_id = 1;
}

message GetUserResponse {
    bool exist = 1;
    User user = 2;
    uint64 user_id = 3;
}

message GetUserIdBySessionRequest {
    string sid = 1;
}

message GetUserIdBySessionResponse {
    uint64 user_id = 1;
    string sid = 2;
    string email = 3;
}

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
    rpc GetUserIdBySession (GetUserIdBySessionRequest) returns (GetUserIdBySessionResponse) {};
}
